fix: navbar inset decreased for better alignment of close icon

--- a/css/styles.css
+++ b/css/styles.css
@@ -30,7 +30,7 @@ body {
 @media screen and (max-width: 769px) {
   .nav-list {
     position: fixed;
-    inset: 0 0 70% 0;
+    inset: 0 0 60% 0;
     padding: 3rem; /* Adjust as needed */
     display: flex;
     flex-direction: column;
